<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_nav"
        android:icon="@drawable/baseline_home_24"
        android:iconTint="@color/three_color"
        android:title="@string/home" />


    <item
        android:id="@+id/feed_nav"
        android:icon="@drawable/baseline_feed_24"
        android:iconTint="@color/three_color"
        android:title="@string/feedback" />
    <item
        android:id="@+id/sales_nav"
        android:icon="@drawable/baseline_add_circle_outline_24"
        android:iconTint="@color/three_color"
        android:title="@string/reportsales" />
    <item
        android:id="@+id/news_nav"
        android:icon="@drawable/baseline_domain_24"
        android:iconTint="@color/three_color"
        android:title="@string/news" />

    <item
        android:id="@+id/notification_nav"
        android:icon="@drawable/baseline_notifications_none_24"
        android:iconTint="@color/three_color"
        android:title="@string/inbox" />


</menu>
