<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_constraint_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_gray_s"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ic_home"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:scaleType="fitXY"
                android:src="@drawable/baseline_dehaze_24"
                app:layout_constraintBottom_toBottomOf="@id/searchview_home"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchview_home"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:foregroundGravity="center"
                android:gravity="center"
                android:textColor="@color/three_color"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ic_home"
                app:layout_constraintTop_toTopOf="parent"
                app:queryHint="@string/searchproduct" />

            <LinearLayout
                android:id="@+id/view_linear_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal"
                android:weightSum="10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchview_home">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/balancetotal"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/balance_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="5dp"
                    android:layout_weight="9"
                    android:gravity="end"
                    android:text="1000 PTS"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/img_home_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="-50dp"
            android:src="@drawable/baseline_cyclone_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_constraint_home"
            app:tint="@color/txt_gray" />

        <TextView
            android:id="@+id/name_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_weight="9"
            android:fontFamily="@font/lorin_regular"
            android:gravity="end"
            android:text="Hello Admin"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_home_logo" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_marginStart="15dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_home"
            tools:listitem="@layout/item_product" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:weightSum="4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_home">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/baseline_auto_stories_24"
                    app:civ_border_color="@color/gray"
                    app:civ_border_width="2dp" />

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/training"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"

                    android:src="@drawable/baseline_signal_cellular_alt_24"
                    app:civ_border_color="@color/gray"
                    app:civ_border_width="2dp" />

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/performence"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="75dp"

                    android:layout_height="75dp"
                    android:src="@drawable/baseline_notifications_none_24"
                    app:civ_border_color="@color/gray"
                    app:civ_border_width="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/promotion"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:src="@drawable/baseline_card_giftcard_24"
                    app:civ_border_color="@color/gray"
                    app:civ_border_width="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/rewards"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>